[tool.poetry]
name = "etils"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
importlib-resources = "^5.9.0"
typing-extensions = "^4.3.0"
zipp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
epath = [
    "importlib_resources",
    "typing_extensions",
    "zipp",
    "typing_extensions",
]
